syntax = "proto3";

package gosphere;

import "message.proto";

option go_package = "github.com/off-chain-storage/GoSphere/proto";

service ConnectionRouter{
    rpc SendDataToPropagationManager (BlockData) returns (Response) {}
}